--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,11 @@
 \documentclass{article}
+
+\usepackage{kotex}
+
+\usepackage{fontspec}
+\setmainfont{Pretendard Regular}
+
 \begin{document}
-Hello, World!
+안녕, 세계!
 \end{document}
 
